# ax-solution

./: .gitignore  .gitmodules  README.md  build_jsoncpp.sh  build_rtsp.sh  get_bsp.sh  get_opencv.sh  select_chip.sh
inc/: ax_pipeline.hpp  err.hpp  node.hpp  packet.hpp  port.hpp  stream.hpp  string_utils.hpp
inc/nodes/: RTSPPullNode.hpp  RTSPPushNode.hpp
inc/utils/: RTSPLiveStreamer.cpp  RTSPLiveStreamer.h
solutions/rtsp_pull/: CMakeLists.txt  main.cpp
toolchains/: ax620a.cmake  ax620e.cmake
